src/routes/global.scss
:root {
	font-family:
		Ysabeau Infant,
		Segoe UI,
		sans-serif;
	font-size: calc(1.2em + 0.2vw);
	font-weight: 520;
}

body {
	margin: 0;
	padding: 0;
	background: linear-gradient(#00279c, #1370d4);
	background-attachment: fixed;
	color: white;
}

.box {
	margin-bottom: 2rem;
	background-color: #fffffff2;
	border-radius: 0.75rem;
	padding: 2rem;
	color: black;
	overflow-x: auto;

	> :first-child {
		margin-top: 0;
	}
	> :last-child {
		margin-bottom: 0;
	}

	@media (max-width: 38rem) {
		margin: 0 -2rem;
	}

	a {
		color: #0067c1;
		font-weight: 550;
		text-underline-offset: 4px;
		text-decoration-thickness: 1.6px;

		&:hover,
		&:focus {
			color: #004daa;
			text-decoration-color: magenta;
		}
	}
}

p,
ul,
ol,
table,
blockquote,
h1,
h2,
h3,
h4,
h5,
h6,
.h1,
.h2,
.h3,
.h4,
.h5,
.h6 {
	margin: 1rem 0;
	line-height: 150%;
}

strong,
b {
	font-weight: 800;
}

h1,
.h1 {
	font-weight: 800;
	text-align: center;
	font-size: 1.9rem;
	margin: 0 0 2rem 0;
	line-height: 150%;
}
h2,
.h2 {
	font-weight: 750;
	font-size: 1.5rem;
}
h3,
.h3 {
	font-size: 1.35rem;
}
h4,
.h4 {
	font-size: 1.2rem;
}
h5,
.h5 {
	font-size: 1.1rem;
}
h6,
.h6 {
	font-size: 1rem;
}

.subtitle {
	font-weight: 520;
	font-size: 0.75em;
	line-height: 1em;
}

a {
	color: #b4efff;

	&:hover,
	&:focus {
		color: #71d9ff;
		text-decoration-color: magenta;
	}
}

.formi {
	box-sizing: border-box;
	border: 1.2px solid #b1b1b1;
	border-radius: 7px;
	background-color: white;
	font: inherit;
	font-size: 0.95rem;
	padding: 10px 12px;
	transition: border-color 0.2s;
	width: 100%;
	resize: vertical;

	&:hover,
	&:focus {
		border-color: #70b3fa;
	}

	&:focus-visible {
		outline: 3px solid #70b3fa;
		outline-offset: -1px;
	}

	&.invalid {
		border-color: #ff3131;
		outline: 2px solid #ff3131;
		outline-offset: -1px;
	}
}

button.formi,
.button.formi {
	cursor: default;
	text-decoration: none;
	background-color: #0001;
	border: 1px solid #0002;
	transition:
		border-color 0.2s,
		background-color 0.2s;
	width: auto;

	&:hover,
	&:focus {
		border-color: #70b3fa;
		background-color: #badbff;
	}

	&:focus-visible {
		outline: 3px solid #70b3fa;
		outline-offset: -1px;
	}

	&.primary {
		background-color: #006dcd;
		color: white;
		font-weight: 750;
		letter-spacing: 0.01em;
		border: none;

		&:hover,
		&:focus {
			background-color: #00529a;
		}

		&:focus-visible {
			outline: 3px solid #70b3fa;
			outline-offset: 0;
		}

		&.disabled {
			background-color: #000a;
		}
	}

	&.red {
		border-color: #fb9090;
		background-color: #fbc9c9;

		&:hover,
		&:focus {
			border-color: #f46262;
			background-color: #fab0b0;
		}
	}
}

.block {
	display: block;
}

details summary {
	margin: 1rem 0;
	cursor: pointer;

	h1,
	h2,
	h3,
	h4,
	h5,
	h6 {
		display: contents;
	}

	&:hover,
	&:focus {
		color: #004bb5;
	}
}

hr {
	border: 2px solid #0002;
	border-width: 2px 0 0 0;
}

